--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,6 +6,8 @@
 
     <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="20" />
     <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
